[gd_scene load_steps=13 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://Ast1scn.tscn" type="PackedScene" id=2]
[ext_resource path="res://swShip.png" type="Texture" id=3]
[ext_resource path="res://luz.png" type="Texture" id=4]
[ext_resource path="res://pajarito.png" type="Texture" id=5]
[ext_resource path="res://Ast2scn.tscn" type="PackedScene" id=6]
[ext_resource path="res://retroFunck.ogg" type="AudioStream" id=7]

[sub_resource type="ParticlesMaterial" id=1]
lifetime_randomness = 1.0
emission_shape = 2
emission_box_extents = Vector3( 200, 300, 1 )
flag_disable_z = true
direction = Vector3( 200, 0, 0 )
spread = 0.0
gravity = Vector3( -100, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0

[sub_resource type="ParticlesMaterial" id=2]
emission_shape = 2
emission_box_extents = Vector3( 1, 1, 1 )
flag_disable_z = true
direction = Vector3( 5, 0, 0 )
gravity = Vector3( -2, 98, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping_random = 0.14
angle_random = 0.72
scale = 4.0
scale_random = 0.18
anim_offset_random = 0.11

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 32, 16 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 32, 16 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 32, 784 )

[node name="World" type="Node2D"]
position = Vector2( 280, 376 )

[node name="Particles2D2" type="Particles2D" parent="."]
position = Vector2( 1136, -56 )
z_index = 2
amount = 100
lifetime = 20.0
process_material = SubResource( 1 )

[node name="Particles2D3" type="Particles2D" parent="."]
position = Vector2( 1112, 176 )
z_index = 2
amount = 100
lifetime = 20.0
visibility_rect = Rect2( -19799.1, -292.959, 19992.7, 590.359 )
process_material = SubResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enable = true

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
anchor_left = 0.273438
anchor_top = 0.626667
anchor_right = 0.273438
anchor_bottom = 0.626667
margin_left = 240.0
margin_top = -336.0
margin_right = 312.0
margin_bottom = -296.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0.054902, 0.0627451, 0.0980392, 1 )
position = Vector2( 236, 36 )
scale = Vector2( 107.5, 53.5 )
z_index = -5
texture = ExtResource( 5 )

[node name="PlayerNode" type="Node2D" parent="."]

[node name="Player" type="KinematicBody2D" parent="PlayerNode"]
script = ExtResource( 1 )

[node name="Particles2D" type="Particles2D" parent="PlayerNode/Player"]
modulate = Color( 0.458824, 0.0941176, 0.0941176, 1 )
show_behind_parent = true
position = Vector2( -30.5858, -3.88904 )
rotation = 1.58825
scale = Vector2( 5, 1 )
speed_scale = 4.32
randomness = 0.68
process_material = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="PlayerNode/Player"]
texture = ExtResource( 3 )

[node name="Detect" type="Area2D" parent="PlayerNode/Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player/Detect"]
shape = SubResource( 4 )

[node name="Resetter" type="Area2D" parent="PlayerNode/Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerNode/Player/Resetter"]
position = Vector2( -552, 0 )
shape = SubResource( 5 )

[node name="Light2D" type="Light2D" parent="PlayerNode/Player"]
z_index = 1
texture = ExtResource( 4 )
shadow_enabled = true

[node name="Wallnode" parent="." instance=ExtResource( 2 )]
position = Vector2( 248, 0 )

[node name="Wallnode2" parent="." instance=ExtResource( 2 )]
position = Vector2( 992, 304 )

[node name="Wallnode3" parent="." instance=ExtResource( 2 )]
position = Vector2( 480, 264 )

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Ast2scn" parent="." instance=ExtResource( 6 )]
position = Vector2( 576, -232 )

[node name="Ast2scn2" parent="." instance=ExtResource( 6 )]
position = Vector2( 840, -56 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = 1.0
autoplay = true
bus = "Music"
[connection signal="area_entered" from="PlayerNode/Player/Detect" to="PlayerNode/Player" method="_on_Detect_area_entered"]
[connection signal="body_entered" from="PlayerNode/Player/Detect" to="PlayerNode/Player" method="_on_Detect_body_entered"]
[connection signal="body_entered" from="PlayerNode/Player/Resetter" to="PlayerNode/Player" method="_on_Resetter_body_entered"]
